--- a/themes/Flex/templates/index.html
+++ b/themes/Flex/templates/index.html
@@ -2,6 +2,8 @@
 
 {% block content %}
 
+<meta name="propeller" content="548089b5095acfa082285da611a0322c" />
+
 {% if GOOGLE_ADSENSE and GOOGLE_ADSENSE.ads.index_top %}
   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <ins class="adsbygoogle ads-responsive"
